--- a/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
+++ b/webBanTiVi/src/main/resources/templates/user/layout/_navbar.html
@@ -120,7 +120,7 @@
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="javascript:void(0)">
+                        <a class="nav-link" href="/cart">
                             <span class="position-relative">
                                 <i class='bx bx-cart bx-md'></i>
                                 <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning "
