--- a/webBanTiVi/src/main/resources/templates/user/page/home/home.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/home/home.html
@@ -95,22 +95,27 @@
                                             <span class="fs-5 fw-semibold card-title" th:text="${pro.name}"></span>
                                         </a>
                                         <div class="mb-1">
-                                            <span th:each="size:${pro.size}" class="border mx-1 p-1" th:text="${size.nameSizeInch}"></span>
-                                            <span th:each="resolution:${pro.resolution}" class="border mx-1 p-1"th:text="${resolution.nameResolution}"></span>
+                                            <span th:each="size:${pro.size}" class="border mx-1 p-1"
+                                                  th:text="${size.nameSizeInch}"></span>
+                                            <span th:each="resolution:${pro.resolution}" class="border mx-1 p-1"
+                                                  th:text="${resolution.nameResolution}"></span>
                                         </div>
                                         <div class="mb-1">
-                                            <span th:each="origin:${pro.origin}" class="border mx-1 p-1" th:text="${origin.nameOrigin}"></span>
-                                            <span th:each="manufacture:${pro.manufacture}" class="border mx-1 p-1" th:text="${manufacture.nameManufacture}"></span>
+                                            <span th:each="origin:${pro.origin}" class="border mx-1 p-1"
+                                                  th:text="${origin.nameOrigin}"></span>
+                                            <span th:each="manufacture:${pro.manufacture}" class="border mx-1 p-1"
+                                                  th:text="${manufacture.nameManufacture}"></span>
                                         </div>
 
                                         <div>
-                                            <span th:if="${pro.getCouponProduct()!=null}" ></span>
-                                            <span class=" text-strike-through fs-big" th:text="${pro.getCoupon()}" ></span>
+                                            <span th:if="${pro.getCouponProduct()!=null}"></span>
+                                            <span class=" text-danger fs-large fw-bold"
+                                                  th:text="${pro.getCoupon()}"></span>
                                         </div>
 
 
                                         <div>
-                                            <span class="text-danger fs-large fw-bold" th:text="${pro.price_export}">
+                                            <span class="text-strike-through fs-big" th:text="${pro.price_export}">
                                                 <small class="align-text-top">đ</small>
                                             </span>
                                         </div>
@@ -118,8 +123,8 @@
                                 </div>
                             </div>
 
-            </div>
-        </div>
+                        </div>
+                    </div>
     </section>
     <section>
         <img class="d-block w-100" src="/image/tv-xiaomi-thang-9-1200x200.jpg" alt="Second slide">
